Unraveling recursion: change author order
After some soul-searching I've gone with me first and then alphabetical.

--- a/papers/unraveling-recursion/compiling-to-fomega.tex
+++ b/papers/unraveling-recursion/compiling-to-fomega.tex
@@ -3,12 +3,12 @@
 \title{Unraveling recursion: compiling an IR with recursion to System F}
 
 \author{
- Roman Kireev\inst{1}\orcidID{0000-0003-4687-2739}
-\and Chad Nester\inst{2}
-\and Michael Peyton Jones\inst{1}\orcidID{0000-0003-0602-1657}
-\and Philip Wadler\inst{2}\orcidID{0000-0001-7619-6378}
+Michael Peyton Jones\inst{1}\orcidID{0000-0003-0602-1657}
 \and Vasilis Gkoumas\inst{1}
+\and Roman Kireev\inst{1}\orcidID{0000-0003-4687-2739}
 \and Kenneth MacKenzie\inst{1}
+\and Chad Nester\inst{2}
+\and Philip Wadler\inst{2}\orcidID{0000-0001-7619-6378}
 }
 
 \institute{IOHK\\
@@ -16,7 +16,6 @@
 \and University of Edinburgh\\
 \email{\{cnester,wadler\}@inf.ed.ac.uk}
 }
-
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
