Improve the API for payment selection.
This improvement gives user an easy way to write contract code where
the value spent is specified in several iterations, giving more control
over the inputs used by the wallet (for example, to cover fees).

We tried to cover a couple of use cases (mostly used for covering
fees):

1) If we have a set of inputs specified, when we add a fee, we would
   like to make it easy to choose to cover fees from the remaining change,
   or to use new inputs to cover fees.

2) Make it easy to automate spending behaviors across all contract
   code where, for example, for each spending of funds, you need to
   add some extra book-keeping transactions.

3) In general, if we have a transaction where some inputs have already
   been specified, we need to provide a way to spend more without
   using the previously added inputs.

Overall I do think that these things are possible with the current
contract API, but they would require more code on the client side to
keep track of the inputs used so far and hack the code to choose new
inputs to cover some other fees.

This fixes #1381

--- a/plutus-book/doc/auction/english.adoc
+++ b/plutus-book/doc/auction/english.adoc
@@ -603,7 +603,7 @@ start' = do
             []         -> go1 ref v
             (ref' : _) -> do
                 key <- ownPubKey
-                let i1 = pubKeyTxIn ref key
+                let i1 = pubKeyTxIn key ref
                     i2 = scriptTxIn
                             ref'
                             (mkAdminValidator admin)
@@ -644,7 +644,7 @@ start' = do
                 logMsg $ T.pack $
                     "starting tokens " ++ show nf
                 let v  = V.singleton s adminTokenName 1
-                    i  = pubKeyTxIn ref key
+                    i  = pubKeyTxIn key ref
                     o1 = scriptTxOut
                             v
                             (mkNonFungibleValidator nf)
