Kwxm/eutxo spec 2 (#1426)
* Update reference style in EUTXO spec

* Combine EUTXO-2 and EUTXO-3; reduce verbiage

* Minor updates

* Fix some typos

* Remove old comments

* Minor updates

* Improve description of PendingTx type

* Combine EUTXO-2 and EUTXO-3; reduce verbiage

* Minor updates

* Fix some typos

* Remove old comments

* Minor updates

* Improve description of PendingTx type

* Fix some confusing stuff about script addresses

* Fix typo

* Add remark about EUTXO layers

* Nothing much

* Relegate verbaige to appendix

* Minor updates

* Minor updates

* Minor updates

* Minor updates

* Minor updates

* Nothing

* Tidying up prelude

* Attempt at specification of pending datascript validation

* Some minor corrections

* Some minor corrections

* Fix some notation

* Fix some typos

* More tidying up

* Update comment

* Typo

* Slight clarification

* Wrong font

* Hide todo notes

* Minor updates

--- a/extended-utxo-spec/extended-utxo-specification.bib
+++ b/extended-utxo-spec/extended-utxo-specification.bib
@@ -55,10 +55,11 @@ howpublished={\url{https://solidity.readthedocs.io/}}
 
 @misc{ERC-721,
 title={{ERC-721 standard for non-fungible tokens in Ethereum}},
+author= {Ethereum},
 year = {2017},
 howpublished={\url{http://erc721.org/}}
 }
-
+% Who exactly should the author be?
 
 @inproceedings{Simplicity,
   author = {Russel O'Connor},
@@ -97,8 +98,16 @@ year={2019}
 @techreport{Plutus-Core-spec,
 title = {{Formal Specification of the Plutus Core Language}},
 note={Available at \url{https://github.com/input-output-hk/plutus/tree/master/plutus-core-spec}},
+author={IOHK},
 institution={IOHK},
 year={2019}
 }
 
 
+@book{Plutus-book,
+title={{Plutus: Writing Reliable Smart Contracts}},
+author={Lars Br{\"u}njes and Polina Vinogradova},
+note={Available at \url{https://github.com/input-output-hk/plutus/tree/master/plutus-book}},
+institution={IOHK},
+year={2019}
+}
