Fix heading levels in README

--- a/README.adoc
+++ b/README.adoc
@@ -36,7 +36,7 @@ Even if you already have Nix installed, make sure to set up the xref:iohk-binary
 === How to build the Haskell packages and other artifacts
 
 [[building-with-nix]]
-=== How to build Haskell packages and other artifacts with Nix
+==== How to build Haskell packages and other artifacts with Nix
 
 Run `nix build -f default.nix localPackages.language-plutus-core`
 from the root to build the Plutus Core library.
@@ -44,7 +44,7 @@ from the root to build the Plutus Core library.
 See the section on xref:nix-build-attributes[Nix build attributes] to find out
 what other attributes you can build.
 
-=== How to build Haskell packages with `cabal`
+==== How to build Haskell packages with `cabal`
 
 Run `cabal v2-build language-plutus-core` from the root to build the
 Plutus Core library.
@@ -52,7 +52,7 @@ Plutus Core library.
 See the link:./cabal.project[cabal project file] to see the other
 projects that you can build with `cabal`.
 
-=== How to build the Haskell packages with `stack`
+==== How to build the Haskell packages with `stack`
 
 Run `stack build language-plutus-core` from the root to build the
 Plutus Core library.
