added marlowe docs blockly section

--- a/marlowe-tutorial/doc/index.adoc
+++ b/marlowe-tutorial/doc/index.adoc
@@ -30,6 +30,7 @@ include::introducing-marlowe.adoc[leveloffset=+ 1]
 include::escrow-ex.adoc[leveloffset=+1]
 include::marlowe-model.adoc[leveloffset=+1]
 include::marlowe-step-by-step.adoc[leveloffset=+1]
+include::playground-blockly.adoc[leveloffset=+1]
 // include::escrow-step-by-step.adoc[leveloffset=+1]
 include::marlowe-data.adoc[leveloffset=+1]
 include::embedded-marlowe.adoc[leveloffset=+1]
