State machines: purge some type synonyms
These were just here to avoid type families, but those now work.

--- a/plutus-book/doc/auction/english.adoc
+++ b/plutus-book/doc/auction/english.adoc
@@ -6,6 +6,7 @@
 {-# LANGUAGE NoImplicitPrelude               #-}
 {-# LANGUAGE ScopedTypeVariables             #-}
 {-# LANGUAGE TemplateHaskell                 #-}
+{-# LANGUAGE TypeApplications                #-}
 {-# OPTIONS_GHC -fno-warn-missing-signatures #-}
 
 module Auction.English where
@@ -553,7 +554,7 @@ redeemer scripts.
 mkEARedeemer :: EAAction -> RedeemerScript
 mkEARedeemer a = RedeemerScript $
     $$(compileScript [||
-        (mkStepRedeemer :: EAAction -> StateMachineRedeemerFunction EAState EAAction) ||])
+        (mkStepRedeemer @EAState @EAAction) ||])
     `applyScript`
     lifted a
 ----
