plutus-tx: add generic Data type, use in contracts
We also need to add `Applicative` so we can write non-awful parsers.

This is an interim position:
- It is a step back in usability since `Data` is very visible to users.
- There are lots of boilerplate instances.

--- a/plutus-book/doc/auction/english.adoc
+++ b/plutus-book/doc/auction/english.adoc
@@ -11,8 +11,10 @@
 
 module Auction.English where
 
+import           Prelude                        (Applicative (..))
+
 import           Language.PlutusTx
-import           Language.PlutusTx.Prelude
+import           Language.PlutusTx.Prelude      hiding (Applicative (..))
 import           Language.PlutusTx.StateMachine
 import           Ledger
 import qualified Ledger.Ada                     as A
