--- a/plutus-book/doc/non-fungible/nonfungible8.adoc
+++ b/plutus-book/doc/non-fungible/nonfungible8.adoc
@@ -10,8 +10,10 @@
 
 module NonFungible.NonFungible8 where
 
+import           Prelude                    (Applicative (..))
+
 import           Language.PlutusTx
-import           Language.PlutusTx.Prelude
+import           Language.PlutusTx.Prelude  hiding (Applicative (..))
 import           Ledger
 import qualified Ledger.Ada                 as A
 import qualified Ledger.Value               as V
