--- a/marlowe-tutorial/doc/index.adoc
+++ b/marlowe-tutorial/doc/index.adoc
@@ -36,5 +36,6 @@ include::marlowe-data.adoc[leveloffset=+1]
 include::embedded-marlowe.adoc[leveloffset=+1]
 include::using-marlowe.adoc[leveloffset=+1]
 include::playground-overview.adoc[leveloffset=+1]
+include::static-analysis.adoc[leveloffset=+1]
 include::actus-marlowe.adoc[leveloffset=+1]
 // include::marlowe-plutus.adoc[leveloffset=+1]
